--- a/GameData/WildBlueIndustries/Buffalo/ModuleManagerPatches/MM_Snacks.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/ModuleManagerPatches/MM_Snacks.cfg
@@ -124,6 +124,38 @@
 		}
 	}
 
+	MODULE:NEEDS[SnacksFreshAir]
+	{
+		name = SnacksConverter
+		ConverterName = Air Scrubber
+		StartActionName = Start Air Scrubber
+		StopActionName = Stop Air Scrubber
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = false
+		
+		INPUT_RESOURCE
+		{
+			ResourceName = StaleAir
+			Ratio = 0.00074
+			FlowMode = ALL_VESSEL
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 0.4
+			FlowMode = ALL_VESSEL
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = FreshAir
+			Ratio = 0.000296
+			FlowMode = ALL_VESSEL
+		}
+	}
+
 	MODULE:NEEDS[BARIS]
 	{
 		name = ModuleQualityControl
@@ -167,11 +199,18 @@
 		amount = 0
 		maxAmount = 100
 	}
+
+	RESOURCE:NEEDS[SnacksFreshAir]
+	{
+		name = StaleAir
+		amount = 0
+		maxAmount = 64
+	}
 }
 
 @PART[WBI_ShortPassengerCab]:NEEDS[SnacksUtils]
 {
-	//This is calibrated for 4 kerbals at 100% efficiency when then consume
+	//This is calibrated for 2 kerbals at 100% efficiency when then consume
 	//1 snack per meal and 1 meal per day.
 	//In game, the player can adjust the efficiency of the recycler from 10% to 100%.
 	//Given the dynamic nature, the input/output ratio is ALWAYS set to 0.00004630,
@@ -211,6 +250,38 @@
 			ResourceName = Snacks
 			Ratio = 0.000034723
 			DumpExcess = false
+			FlowMode = ALL_VESSEL
+		}
+	}
+
+	MODULE:NEEDS[SnacksFreshAir]
+	{
+		name = SnacksConverter
+		ConverterName = Air Scrubber
+		StartActionName = Start Air Scrubber
+		StopActionName = Stop Air Scrubber
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = false
+		
+		INPUT_RESOURCE
+		{
+			ResourceName = StaleAir
+			Ratio = 0.00074
+			FlowMode = ALL_VESSEL
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 0.4
+			FlowMode = ALL_VESSEL
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = FreshAir
+			Ratio = 0.000296
 			FlowMode = ALL_VESSEL
 		}
 	}
@@ -257,6 +328,13 @@
 		name = Soil
 		amount = 0
 		maxAmount = 50
+	}
+
+	RESOURCE:NEEDS[SnacksFreshAir]
+	{
+		name = StaleAir
+		amount = 0
+		maxAmount = 32
 	}
 }
 
