--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/castilloFactory.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/castilloFactory.cfg
@@ -463,7 +463,7 @@ PART
 		opsViewTitle = Castillo Operations
 
 		//Snacks
-		resourcesToKeep:NEEDS[SnacksUtils] = ElectricCharge;Snacks
+		resourcesToKeep:NEEDS[SnacksUtils] = ElectricCharge;Snacks;FreshAir;StaleAir
 
 		//TAC-LS
 		resourcesToKeep:NEEDS[TacLifeSupport] = ElectricCharge;Food;Oxygen;Water;CarbonDioxide;Waste;WasteWater
