--- a/GameData/WildBlueIndustries/Pathfinder/Resources/GoldStrikeResources.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Resources/GoldStrikeResources.cfg
@@ -84,6 +84,15 @@ STORAGE_TEMPLATE
 
 }
 
+@PLANETARY_RESOURCE:HAS[#ResourceName[Graviolium]]
+{
+    Tag = Aurum
+}
+@BIOME_RESOURCE:HAS[#ResourceName[Graviolium]]
+{
+    Tag = Aurum
+}
+
 //Stock drill patches so that they too can convert Ore into a GOLDSTRIKE resource.
 @PART[RadialDrill,MiniDrill]
 {
