--- a/GameData/WildBlueIndustries/Pathfinder/Templates/ClassicStock/MM_Snacks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/ClassicStock/MM_Snacks.cfg
@@ -86,6 +86,52 @@
 		EfficiencyBonus = 1
 	}
 
+	MODULE:NEEDS[SnacksFreshAir]
+	{
+		name = SnacksConverter
+		ConverterName = Air Scrubber
+		StartActionName = Start Air Scrubber
+		StopActionName = Stop Air Scrubber
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = false
+		
+		INPUT_RESOURCE
+		{
+			ResourceName = StaleAir
+			Ratio = 0.00074
+			FlowMode = ALL_VESSEL
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 0.4
+			FlowMode = ALL_VESSEL
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = FreshAir
+			Ratio = 0.000296
+			FlowMode = ALL_VESSEL
+		}
+	}
+
+	RESOURCE:NEEDS[SnacksFreshAir]
+	{
+		name = StaleAir
+		amount = 0
+		maxAmount = 64
+	}
+
+	RESOURCE:NEEDS[SnacksFreshAir]
+	{
+		name = FreshAir
+		amount = 400
+		maxAmount = 400
+	}
+
 	RESOURCE
 	{
 		name = Soil
@@ -101,7 +147,7 @@
 
 	MODULE
 	{
-		name = WBIGreenhouse
+		name = SnacksConverter
 		ConverterName = Greenhouse
 		StartActionName = Start Grenhouse
 		StopActionName = Stop Greenhouse
@@ -112,20 +158,12 @@
 		ExperienceEffect = ScienceSkill
 		EfficiencyBonus = 1
 		hoursPerCycle = 540 //Number of hours to grow crops
-		minimumSuccess = 45
+		minimumSuccess = 1
 		criticalSuccess = 90
-		criticalFail = 20
-		cropResource = Snacks
-
-		//Calibrated for standard 1 snack per meal, 3 meals per day
-		//Supports 3 kerbals
-		cropYield = 810
+		criticalFail = 5
 
 		criticalSuccessBonus = 0.25
-		failureLoss = 0.5
-		repairSkill = ScienceSkill
-		repairResource = Equipment
-		repairAmount = 50
+		failureLoss = 0.25
 
 		INPUT_RESOURCE
 		{
@@ -143,6 +181,20 @@
 		{
 			ResourceName = ElectricCharge
 			Ratio = 6
+		}
+
+		OUTPUT_RESOURCE:NEEDS[SnacksFreshAir]
+		{
+			ResourceName = FreshAir
+			Ratio = 0.00045
+		}
+
+		//Calibrated for 1 snack per meal, 3 meals per day
+		//Supports 3 kerbals
+		YIELD_RESOURCE
+		{
+			ResourceName = Snacks
+			Ratio = 810
 		}
 	}
 
@@ -169,7 +221,7 @@
 
 	MODULE
 	{
-		name = WBIGreenhouse
+		name = SnacksConverter
 		ConverterName = Greenhouse
 		StartActionName = Start Grenhouse
 		StopActionName = Stop Greenhouse
@@ -180,20 +232,12 @@
 		ExperienceEffect = ScienceSkill
 		EfficiencyBonus = 1
 		hoursPerCycle = 540 //Number of hours to grow crops
-		minimumSuccess = 45
+		minimumSuccess = 1
 		criticalSuccess = 90
-		criticalFail = 20
-		cropResource = Snacks
-
-		//Calibrated for standard 1 snack per meal, 3 meals per day
-		//Supports 10 kerbals
-		cropYield = 2700
+		criticalFail = 5
 
 		criticalSuccessBonus = 0.25
-		failureLoss = 0.5
-		repairSkill = ScienceSkill
-		repairResource = Equipment
-		repairAmount = 150
+		failureLoss = 0.25
 
 		INPUT_RESOURCE
 		{
@@ -211,6 +255,20 @@
 		{
 			ResourceName = ElectricCharge
 			Ratio = 12
+		}
+
+		OUTPUT_RESOURCE:NEEDS[SnacksFreshAir]
+		{
+			ResourceName = FreshAir
+			Ratio = 0.00135
+		}
+
+		//Calibrated for 1 snack per meal, 3 meals per day
+		//Supports 10 kerbals
+		YIELD_RESOURCE
+		{
+			ResourceName = Snacks
+			Ratio = 2700
 		}
 	}
 
@@ -235,7 +293,7 @@
 {
 	@MODULE[WBIOutback]
 	{
-		@resourcesToKeep = EVA Propellant;Snacks
+		@resourcesToKeep = EVA Propellant;Snacks;FreshAir
 	}
 }
 
@@ -243,7 +301,7 @@
 {
 	@MODULE[WBIMultipurposeStorage]
 	{
-		resourcesToKeep = Snacks;Soil
+		resourcesToKeep = Snacks;Soil;FreshAir
 	}
 
 	RESOURCE
@@ -252,13 +310,20 @@
 		amount = 0
 		maxAmount = 200
 	}
+
+	RESOURCE:NEEDS[SnacksFreshAir]
+	{
+		name = FreshAir
+		amount = 300
+		maxAmount = 300
+	}
 }
 
 @PART[WBI_DocSciLab]:NEEDS[SnacksUtils]
 {
 	@MODULE[WBIMultipurposeLab]
 	{
-		resourcesToKeep = Snacks;Soil
+		resourcesToKeep = Snacks;Soil;FreshAir
 	}
 
 	RESOURCE
@@ -267,19 +332,33 @@
 		amount = 0
 		maxAmount = 400
 	}
+
+	RESOURCE:NEEDS[SnacksFreshAir]
+	{
+		name = FreshAir
+		amount = 300
+		maxAmount = 300
+	}
 }
 
 @PART[WBI_Hacienda]:NEEDS[SnacksUtils]
 {
 	@MODULE[WBIMultipurposeHab]
 	{
-		resourcesToKeep = Snacks;Soil
+		resourcesToKeep = Snacks;Soil;FreshAir
 	}
 
 	RESOURCE
 	{
 		name= Snacks
 		amount = 0
+		maxAmount = 800
+	}
+
+	RESOURCE:NEEDS[SnacksFreshAir]
+	{
+		name = FreshAir
+		amount = 800
 		maxAmount = 800
 	}
 }
@@ -288,7 +367,7 @@
 {
 	@MODULE[WBIMultipurposeHab]
 	{
-		resourcesToKeep = Snacks;Soil
+		resourcesToKeep = Snacks;Soil;FreshAir
 	}
 
 	RESOURCE
@@ -296,6 +375,54 @@
 		name= Snacks
 		amount = 0
 		maxAmount = 800
+	}
+
+	RESOURCE:NEEDS[SnacksFreshAir]
+	{
+		name = FreshAir
+		amount = 400
+		maxAmount = 400
+	}
+
+	MODULE:NEEDS[SnacksStress]
+	{
+		name = SnacksConverter
+		ConverterName = Entertainment Center
+		StartActionName = Start Entertainment
+		StopActionName = Stop Entertainment
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = false
+		
+		//At least one crew needs to be in the part to run the converter.
+		minimumCrew = 1
+
+		//Connection back home required to receive entertainment.
+		requiresHomeConnection = true
+
+		//This condition is set whenever the kerbal enters the part and the converter is active, and
+		//when the converter is started. Since it's registered as a SKILL_LOSS_CONDITION, the kerbals will lose their
+		//skills while the converter is running.
+		conditionSummary = Relaxing
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 0.4
+			FlowMode = ALL_VESSEL
+		}
+
+		//Works like an INPUT_RESOURCE except:
+		// It applies to individual kerbals.
+		// You can specify an AmountPerDay or AmountPerSecond.
+		ROSTER_INPUT_RESOURCE
+		{
+			ResourceName = Stress
+
+			//AmountPerDay will be translated into: AmountPerDay / seconds per homeworld day
+			//This will override AmountPerSecond if it is defined in the node.
+			AmountPerDay = 2
+		}
 	}
 }
 
@@ -303,7 +430,7 @@
 {
 	@MODULE[WBIMultipurposeHab]
 	{
-		resourcesToKeep = Snacks;Soil
+		resourcesToKeep = Snacks;Soil;FreshAir
 	}
 
 	RESOURCE
@@ -311,6 +438,54 @@
 		name= Snacks
 		amount = 0
 		maxAmount = 800
+	}
+
+	RESOURCE:NEEDS[SnacksFreshAir]
+	{
+		name = FreshAir
+		amount = 400
+		maxAmount = 400
+	}
+
+	MODULE:NEEDS[SnacksStress]
+	{
+		name = SnacksConverter
+		ConverterName = Entertainment Center
+		StartActionName = Start Entertainment
+		StopActionName = Stop Entertainment
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = false
+		
+		//At least one crew needs to be in the part to run the converter.
+		minimumCrew = 1
+
+		//Connection back home required to receive entertainment.
+		requiresHomeConnection = true
+
+		//This condition is set whenever the kerbal enters the part and the converter is active, and
+		//when the converter is started. Since it's registered as a SKILL_LOSS_CONDITION, the kerbals will lose their
+		//skills while the converter is running.
+		conditionSummary = Relaxing
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 0.4
+			FlowMode = ALL_VESSEL
+		}
+
+		//Works like an INPUT_RESOURCE except:
+		// It applies to individual kerbals.
+		// You can specify an AmountPerDay or AmountPerSecond.
+		ROSTER_INPUT_RESOURCE
+		{
+			ResourceName = Stress
+
+			//AmountPerDay will be translated into: AmountPerDay / seconds per homeworld day
+			//This will override AmountPerSecond if it is defined in the node.
+			AmountPerDay = 2
+		}
 	}
 }
 
@@ -333,7 +508,7 @@
 {
 	MODULE
 	{
-		name = WBIGreenhouse
+		name = SnacksConverter
 		ConverterName = Greenhouse
 		StartActionName = Start Grenhouse
 		StopActionName = Stop Greenhouse
@@ -344,20 +519,12 @@
 		ExperienceEffect = ScienceSkill
 		EfficiencyBonus = 1
 		hoursPerCycle = 540 //Number of hours to grow crops
-		minimumSuccess = 45
+		minimumSuccess = 1
 		criticalSuccess = 90
-		criticalFail = 20
-		cropResource = Snacks
-
-		//Calibrated for standard 1 snack per meal, 3 meals per day
-		//Supports 10 kerbals
-		cropYield = 2700
+		criticalFail = 5
 
 		criticalSuccessBonus = 0.25
-		failureLoss = 0.5
-		repairSkill = ScienceSkill
-		repairResource = Equipment
-		repairAmount = 150
+		failureLoss = 0.25
 
 		INPUT_RESOURCE
 		{
@@ -375,6 +542,61 @@
 		{
 			ResourceName = ElectricCharge
 			Ratio = 12
+		}
+
+		OUTPUT_RESOURCE:NEEDS[SnacksFreshAir]
+		{
+			ResourceName = FreshAir
+			Ratio = 0.00405
+		}
+
+		//Calibrated for 1 snack per meal, 3 meals per day
+		//Supports 10 kerbals
+		YIELD_RESOURCE
+		{
+			ResourceName = Snacks
+			Ratio = 2700
+		}
+	}
+
+	MODULE:NEEDS[SnacksStress]
+	{
+		name = SnacksConverter
+		ConverterName = Entertainment Center
+		StartActionName = Start Entertainment
+		StopActionName = Stop Entertainment
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = false
+		
+		//At least one crew needs to be in the part to run the converter.
+		minimumCrew = 1
+
+		//Connection back home required to receive entertainment.
+		requiresHomeConnection = true
+
+		//This condition is set whenever the kerbal enters the part and the converter is active, and
+		//when the converter is started. Since it's registered as a SKILL_LOSS_CONDITION, the kerbals will lose their
+		//skills while the converter is running.
+		conditionSummary = Relaxing
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 3.6
+			FlowMode = ALL_VESSEL
+		}
+
+		//Works like an INPUT_RESOURCE except:
+		// It applies to individual kerbals.
+		// You can specify an AmountPerDay or AmountPerSecond.
+		ROSTER_INPUT_RESOURCE
+		{
+			ResourceName = Stress
+
+			//AmountPerDay will be translated into: AmountPerDay / seconds per homeworld day
+			//This will override AmountPerSecond if it is defined in the node.
+			AmountPerDay = 4
 		}
 	}
 
