--- a/GameData/WildBlueIndustries/Buffalo/Parts/Engine/WB22TiltRotor.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Engine/WB22TiltRotor.cfg
@@ -228,6 +228,7 @@ PART
 
 		//We'll use the toolbar app button to control propeller operations.
 		guiVisible = false
+enabledByRCS = true
 
 		//Name of the non-blurred rotor
 		//The whole thing spins
