--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Telegraph.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Telegraph.cfg
@@ -75,6 +75,7 @@ PART
 		requiredResource = ElectricCharge
 		antennaPower = 5000000000
 		DeployFxModules = 0
+		antennaCombinable = True
 	}
 
 	MODULE:NEEDS[KIS]
