--- a/GameData/WildBlueIndustries/Pathfinder/Templates/ClassicStock/MM_Snacks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/ClassicStock/MM_Snacks.cfg
@@ -598,6 +598,12 @@
 			//This will override AmountPerSecond if it is defined in the node.
 			AmountPerDay = 4
 		}
+
+		ROSTER_INPUT_RESOURCE
+		{
+			ResourceName = DaysSick
+			AmountPerDay = 4
+		}
 	}
 
 	RESOURCE
