--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Chuckwagon.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Chuckwagon.cfg
@@ -34,6 +34,12 @@ PART
 	node_stack_right = 1.782, 0.0, -3.282, 1, 0, 0, 2
 	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 2
 
+	NODE
+	{
+		name = rackMount
+		transform = RackNode
+	}
+
 	// --- editor parameters ---
 	TechRequired = specializedConstruction
 	entryCost = 4000
@@ -170,6 +176,7 @@ PART
 		equipPos = (0,0.45,0)
 		equipDir = (0,0,0)
 		runSpeed = 0.8
+		volumeOverride = 400
 	}
 
 	MODULE
