--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Gaslight.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Gaslight.cfg
@@ -54,11 +54,15 @@ PART
 	breakingForce = 2000
 	breakingTorque = 2000
 	bulkheadProfiles = size1, srf
-
 	MODULE:NEEDS[KIS]
 	{
-		name = ModuleKISItem
-		volumeOverride = 250
+		name = ModuleKISItemEvaTweaker
+		volumeOverride = 200
+		carriable = true
+		equipPos = 0,-0.1,-0.15
+		equipMode = part
+		equipSlot = jetpack
+		equipBoneName = aliasJetpack
 		stackable = true
 		allowPartAttach = AllowedWithKisTool
 		allowStaticAttach = AllowedAlways
