--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/drillingRig.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/drillingRig.cfg
@@ -50,7 +50,7 @@ PART
 		name = node3
 	}
 
-	TechRequired = composites
+	TechRequired = specializedConstruction
 	entryCost = 50000
 	cost = 8000
 	category = Utility
