--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/RecyclerArm.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/RecyclerArm.cfg
@@ -35,7 +35,7 @@ PART
 	TechRequired = advConstruction
 	entryCost = 15200
 	cost = 750
-	category = Utility
+	category = none
 	subcategory = 0
 	title = Buffalo Recycler Arm
 	manufacturer = Wild Blue Industries
