--- a/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Production/OmniConverters.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Production/OmniConverters.cfg
@@ -97,7 +97,7 @@ OMNICONVERTER
 	TechRequired = experimentalElectrics 
 	%TechRequired:NEEDS[CommunityTechTree] = fusionPower
 	ConverterName = Fusion Reactor
-	description = Harness the power of the sun to produce ElectricCharge, but probably at small scale.
+	description = Harness the power of the sun to produce ElectricCharge, but probably at small scale. Be sure to have some ElectricCharge as the reactor may have a jump-start requirement.
 	StartActionName = Start Fusion Reactor
 	StopActionName = Stop Fusion Reactor
 	AutoShutdown = false 
@@ -109,22 +109,24 @@ OMNICONVERTER
 	INPUT_RESOURCE
 	{
 		ResourceName = FusionPellets
-		Ratio = 0.0001
-		FlowMode = ALL_VESSEL
+		Ratio = 0.0005
+		FlowMode = STAGE_PRIORITY_FLOW
 	}
-
 	OUTPUT_RESOURCE
 	{
 		ResourceName = ElectricCharge
-		Ratio = 70
-		FlowMode = ALL_VESSEL
+		Ratio = 500
 	}
 	OUTPUT_RESOURCE
 	{
 		ResourceName = ElectroPlasma
-		Ratio = 70
-		FlowMode = ALL_VESSEL
-		DumpExcess = true
+		Ratio = 500
+		DumpExcess = True
+	}
+	REQUIRED_RESOURCE
+	{
+		ResourceName = ElectricCharge
+		Ratio = 500
 	}
 }
 
