--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/arcReactor.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/arcReactor.cfg
@@ -145,6 +145,36 @@ PART
 			Ratio = 1500
 		}
 	}
+	MODULE
+	{
+		name = WBIOmniConverter
+		ConverterName = EPS Transformer
+		StartActionName = Start EPS Transformer
+		StopActionName = Stop EPS Transformer
+		FillAmount = 1.0
+		 
+		AutoShutdown = true
+		GeneratesHeat = false
+		 
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectroPlasma
+			Ratio = 10
+			FlowMode = ALL_VESSEL
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 60
+		}
+
+		REQUIRED_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 60
+		}
+	}
 
 	MODULE
 	{
@@ -217,6 +247,13 @@ PART
 	{
 		name = ElectricCharge
 		amount = 1500
+		maxAmount = 1500
+	}
+	
+	RESOURCE:NEEDS[ClassicStock]
+	{
+		name = ElectroPlasma
+		amount = 0
 		maxAmount = 1500
 	}
 
