--- a/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/storageDepot.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/BoxedParts/storageDepot.cfg
@@ -274,10 +274,10 @@ PART
 		opsViewTitle = Castillo Operations
 
 		//Snacks
-		resourcesToKeep:NEEDS[SnacksUtils] = ElectricCharge;Snacks;FreshAir
+		// resourcesToKeep:NEEDS[SnacksUtils] = ElectricCharge;Snacks;FreshAir
 
 		//TAC-LS
-		resourcesToKeep:NEEDS[TacLifeSupport] = ElectricCharge;Food;Oxygen;Water;CarbonDioxide;Waste;WasteWater
+		// resourcesToKeep:NEEDS[TacLifeSupport] = ElectricCharge;Food;Oxygen;Water;CarbonDioxide;Waste;WasteWater
 
 		//List of part modules that should be enabled/disabled depending upon whether or not the part is deployed.
 		MANAGED_MODULES
