--- a/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Production/OmniConverters.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/Templates/ClassicStock/Production/OmniConverters.cfg
@@ -91,13 +91,14 @@ OMNICONVERTER
 	}
 }
 
+
 //Fusion Reactor
 OMNICONVERTER
 {
 	TechRequired = experimentalElectrics 
 	%TechRequired:NEEDS[CommunityTechTree] = fusionPower
 	ConverterName = Fusion Reactor
-	description = Harness the power of the sun to produce ElectricCharge, but probably at small scale.
+	description = Harness the power of the sun to produce ElectricCharge, but probably at small scale. Be sure to have some ElectricCharge as the reactor may have a jump-start requirement.
 	StartActionName = Start Fusion Reactor
 	StopActionName = Stop Fusion Reactor
 	AutoShutdown = false 
@@ -109,22 +110,25 @@ OMNICONVERTER
 	INPUT_RESOURCE
 	{
 		ResourceName = FusionPellets
-		Ratio = 0.0001
-		FlowMode = ALL_VESSEL
+		Ratio = 0.0005
+		FlowMode = STAGE_PRIORITY_FLOW
 	}
-
 	OUTPUT_RESOURCE
 	{
 		ResourceName = ElectricCharge
-		Ratio = 70
-		FlowMode = ALL_VESSEL
+		Ratio = 500
+		DumpExcess = True
 	}
 	OUTPUT_RESOURCE
 	{
 		ResourceName = ElectroPlasma
-		Ratio = 70
-		FlowMode = ALL_VESSEL
-		DumpExcess = true
+		Ratio = 500
+		DumpExcess = True
+	}
+	REQUIRED_RESOURCE
+	{
+		ResourceName = ElectricCharge
+		Ratio = 500
 	}
 }
 
@@ -266,6 +270,52 @@ OMNICONVERTER
 	OUTPUT_RESOURCE
 	{
 		ResourceName = Oxium
+		Ratio = 0.779
+		DumpExcess = true
+		FlowMode = ALL_VESSEL
+	}
+
+	OUTPUT_RESOURCE
+	{
+		ResourceName = Propellium
+		Ratio = 1.56
+		DumpExcess = true
+		FlowMode = ALL_VESSEL
+	}
+}
+
+OMNICONVERTER
+{
+	templateTags = lab
+	TechRequired = advScienceTech
+	ConverterName = Cryofuels Maker
+	description = Split Water into Propellium and Oxidizer
+	StartActionName = Start Making Cryofuels
+	StopActionName = Stop Making Cryofuels
+	AutoShutdown = false
+	UseSpecialistBonus = true
+	SpecialistEfficiencyFactor = 0.2
+	SpecialistBonusBase = 0.05
+	ExperienceEffect = ScienceSkill
+	EfficiencyBonus = 1
+		 
+	INPUT_RESOURCE
+	{
+		ResourceName = Water
+		Ratio = 1
+		FlowMode = ALL_VESSEL
+	}
+
+	INPUT_RESOURCE
+	{
+		ResourceName = ElectricCharge
+		Ratio = 22
+		FlowMode = ALL_VESSEL
+	}
+
+	OUTPUT_RESOURCE
+	{
+		ResourceName = Oxidizer
 		Ratio = 0.779
 		DumpExcess = true
 		FlowMode = ALL_VESSEL
