--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/CrewCab.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/CrewCab.cfg
@@ -350,6 +350,14 @@ EXPERIMENT_DEFINITION
 	situationMask = 3
 	biomeMask = 3
 
+	description = Check out the local environment, they said. See the world, they said. We'd rather be sailing.
+	mass = 0.01
+	techRequired = spaceExploration
+	tags = basic
+	minCrew = 1
+	requiredResources = LabTime,36
+	situations = ORBITING;LANDED;SPLASHED
+
 	RESULTS
 	{
 		default = Soil samples suggest some kind of volcanic activity in the distant past.
