--- a/GameData/WildBlueIndustries/ClassicStockResources/Templates/Production/OmniConverters.cfg
+++ b/GameData/WildBlueIndustries/ClassicStockResources/Templates/Production/OmniConverters.cfg
@@ -38,6 +38,7 @@ OMNICONVERTER
 //RHK1 (From Ore)
 OMNICONVERTER
 {
+	templateTags = lab
 	TechRequired = advExploration
 	ConverterName = Ore -> RHK1
 	description = Produce RHK1 from Ore. This process has some efficiency over Ore -> LiquidFuel and has its cost.
@@ -75,6 +76,7 @@ OMNICONVERTER
 // Raptium
 OMNICONVERTER
 {
+	templateTags = lab
 	TechRequired = advExploration
 	ConverterName = Hydrokerbon -> Raptium
 	description = Produce Raptium from Hydrokerbon. This process is 100% efficient and very fast.
@@ -201,6 +203,85 @@ OMNICONVERTER
 		FlowMode = ALL_VESSEL
 	}
 }
+
+// Oxidizer (From Hydrokerbon)
+OMNICONVERTER
+{
+	templateTags = lab
+	TechRequired = advExploration
+	ConverterName = Hydrokerbon -> Oxidizer
+	description = Make Oxidizer from Hydrokerbon
+	StartActionName = Start (HK) Ox Processor
+	StopActionName = Stop (HK) Ox Processor
+	AutoShutdown = false
+	UseSpecialistBonus = true
+	SpecialistEfficiencyFactor = 0.2
+	SpecialistBonusBase = 0.05
+	ExperienceEffect = ScienceSkill
+	EfficiencyBonus = 1
+		 
+	INPUT_RESOURCE
+	{
+		ResourceName = Hydrokerbon
+		Ratio = 1
+		FlowMode = ALL_VESSEL
+	}
+
+	INPUT_RESOURCE
+	{
+		ResourceName = ElectricCharge
+		Ratio = 10
+		FlowMode = ALL_VESSEL
+	}
+
+	OUTPUT_RESOURCE
+	{
+		ResourceName = Oxidizer
+		Ratio = 1
+		DumpExcess = false
+		FlowMode = ALL_VESSEL
+	}
+}
+
+//Oxidizer (From Oxium)
+OMNICONVERTER
+{
+	templateTags = lab
+	TechRequired = advExploration
+	ConverterName = Oxium -> Oxidizer
+	description = Make Oxidizer from Oxium.
+	StartActionName = Start Ox Processor
+	StopActionName = Stop Ox Processor
+	AutoShutdown = false
+	UseSpecialistBonus = true
+	SpecialistEfficiencyFactor = 0.2
+	SpecialistBonusBase = 0.05
+	ExperienceEffect = ScienceSkill
+	EfficiencyBonus = 1
+		 
+	INPUT_RESOURCE
+	{
+		ResourceName = Oxium
+		Ratio = 1
+		FlowMode = ALL_VESSEL
+	}
+
+	INPUT_RESOURCE
+	{
+		ResourceName = ElectricCharge
+		Ratio = 5
+		FlowMode = ALL_VESSEL
+	}
+
+	OUTPUT_RESOURCE
+	{
+		ResourceName = Oxidizer
+		Ratio = 1
+		DumpExcess = false
+		FlowMode = ALL_VESSEL
+	}
+}
+
 //Rock Dust Sifter
 OMNICONVERTER
 {
@@ -293,5 +374,37 @@ OMNICONVERTER
 		ResourceName = Nitronite
 		Ratio = 0.1
 		FlowMode = ALL_VESSEL
+	}
+}
+
+// EPS Transformer
+OMNICONVERTER
+{
+	TechRequired = experimentalElectrics
+	%TechRequired:NEEDS[CommunityTechTree] = fusionPower
+	ConverterName = EPS Transformer
+	description = Decompress high-energy ElectroPlasma to regular ElectricCharge.
+	StartActionName = Start EPS Transformer
+	StopActionName = Stop EPS Transformer
+	AutoShutdown = false
+	
+	INPUT_RESOURCE
+	{
+		ResourceName = ElectroPlasma
+		Ratio = 10
+		FlowMode = ALL_VESSEL
+	}
+
+	OUTPUT_RESOURCE
+	{
+		ResourceName = ElectricCharge
+		Ratio = 60
+		FlowMode = ALL_VESSEL
+	}
+
+	REQUIRED_RESOURCE
+	{
+		ResourceName = ElectricCharge
+		Ratio = 60
 	}
 }
