--- a/GameData/WildBlueIndustries/ClassicStockResources/Templates/Utility/Scanners_SCANsat.cfg
+++ b/GameData/WildBlueIndustries/ClassicStockResources/Templates/Utility/Scanners_SCANsat.cfg
@@ -1,187 +1,213 @@
-// Purge SCANsat list
-@SCANSAT_SENSOR:HAS[#SCANtype[64]]:BEFORE[SCANsat]
-{
-	@name = Hydrokerbon
-}
-@SCANSAT_SENSOR:HAS[#SCANtype[128]]:BEFORE[SCANsat]
-{
-	@name = Minerite
-}
-// @SCANSAT_SENSOR:HAS[#SCANtype[256]]:BEFORE[SCANsat]
-// {
-	// @name = Ore
-// }
-@SCANSAT_SENSOR:HAS[#SCANtype[512]]:BEFORE[SCANsat]
-{
-	@name = Rock
-}
-@SCANSAT_SENSOR:HAS[#SCANtype[1024]]:BEFORE[SCANsat]
-{
-	@name = Propellium
-}
-@SCANSAT_SENSOR:HAS[#SCANtype[2048]]:BEFORE[SCANsat]
-{
-	@name = Hexagen
-}
-@SCANSAT_SENSOR:HAS[#SCANtype[4096]]:BEFORE[SCANsat]
-{
-	@name = GrayWater
-}
-@SCANSAT_SENSOR:HAS[#SCANtype[8192]]:BEFORE[SCANsat]
-{
-	@name = Water
-}
-@SCANSAT_SENSOR:HAS[#SCANtype[16384]]:BEFORE[SCANsat]
-{
-	@name = PreciousMetals
-}
-@SCANSAT_SENSOR:HAS[#SCANtype[32768]]:BEFORE[SCANsat]
-{
-	@name = Gemstones
-}
-@SCANSAT_SENSOR:HAS[#SCANtype[65536]]:BEFORE[SCANsat]
-{
-	@name = Zeonium
-}
-@SCANSAT_SENSOR:HAS[#SCANtype[131072]]:BEFORE[SCANsat]
-{
-	@name = Nitronite
-}
-@SCANSAT_SENSOR:HAS[#SCANtype[262144]]:BEFORE[SCANsat]
-{
-	@name = Blutonium
-}
-@SCANSAT_SENSOR:HAS[#SCANtype[1048576]]:BEFORE[SCANsat]
-{
-	@name = Explodium
-}
-@SCANSAT_SENSOR:HAS[#SCANtype[2097152]]:BEFORE[SCANsat]
-{
-	@name = GeoEnergy
-}
-
-!SCANSAT_SENSOR:HAS[#SCANtype[>2097152]]:BEFORE[SCANsat] {}
-
+// Renaming these things work in-game, but changing the colors (and possibly everything else) only works as far as the MM cache and go un-noticed by the SCANsat plugin
 @SCAN_Color_Config:BEFORE[SCANsat]
 {
 	@SCANsat_Resources
 	{
-		@Item[Karbonite]
+		@Item[Ore]
 		{
-			@name = Blutonium
-			@Resource_Planetary_Config
-			{
-				@Item,*
-				{
-					@resourceName = Blutonium
-				}
-			}
-		}
-		@Item[MetallicOre]
-		{
-			@name = Minerite
-			@Resource_Planetary_Config
-			{
-				@Item,*
-				{
-					@resourceName = Minerite
-				}
-			}
-		}
-		@Item[Minerals]
-		{
-			@name = Gemstones
-			@Resource_Planetary_Config
-			{
-				@Item,*
-				{
-					@resourceName = Gemstones
-				}
-			}
-		}
-		@Item[Substrate]
-		{
-			@name = Zeonium
-			@Resource_Planetary_Config
-			{
-				@Item,*
-				{
-					@resourceName = Zeonium
-				}
-			}
+			Tag = WBI
+			@lowResourceColor = 0.25,0.12,0.83,1
+			@highResourceColor = 0.79,0,0.94,1
+			@defaultMinValue = 1
+			@defaultMaxValue = 10
+			!Resource_Planetary_Config {}
 		}
 		@Item[Uraninite]
 		{
-			@name = Propellium
-			@Resource_Planetary_Config
-			{
-				@Item,*
-				{
-					@resourceName = Propellium
-				}
-			}
-		}
-		@Item[MetalOre]
-		{
-			@name = Nitronite
-			@Resource_Planetary_Config
-			{
-				@Item,*
-				{
-					@resourceName = Nitronite
-				}
-			}
-		}
-		@Item[Dirt]
-		{
-			@name = Hydrokerbon
-			@Resource_Planetary_Config
-			{
-				@Item,*
-				{
-					@resourceName = Hydrokerbon
-				}
-			}
+			@name = Blutonium
+			Tag = WBI
+			@lowResourceColor = 0.06,0.08,0.16,1
+			@highResourceColor = 0.42,0.55,0.65,1
+			@defaultMinValue = 1
+			@defaultMaxValue = 15
+			!Resource_Planetary_Config {}
 		}
 		@Item[ExoticMinerals]
 		{
-			@name = Hexagen
-			@Resource_Planetary_Config
-			{
-				@Item,*
-				{
-					@resourceName = Hexagen
-				}
-			}
+			@name = Gemstones
+			Tag = WBI
+			@lowResourceColor = 0.06,0.08,0.16,1
+			@highResourceColor = 0.79,0,0.28,1
+			@defaultMinValue = 1
+			@defaultMaxValue = 11
+			!Resource_Planetary_Config {}
+		}
+		@Item[Water]
+		{
+			@name = GrayWater
+			Tag = WBI
+			@lowResourceColor = 0.06,0.08,0.16,1
+			@highResourceColor = 0.26,0.42,0.68,1
+			@defaultMinValue = 1
+			@defaultMaxValue = 18
+			!Resource_Planetary_Config {}
 		}
 		@Item[Gypsum]
 		{
+			@name = Hexagen
+			Tag = WBI
+			@lowResourceColor = 0.06,0.08,0.16,1
+			@highResourceColor = 0.99,0.35,0.34,1
+			@defaultMinValue = 1
+			@defaultMaxValue = 5
+			@resourceTransparency = 10
+			!Resource_Planetary_Config {}
+		}
+		@Item[Karbonite]
+		{
+			@name = Hydrokerbon
+			Tag = WBI
+			@lowResourceColor = 0.06,0.08,0.16,1
+			@highResourceColor = 1,0.7,0.04,1
+			@defaultMinValue = 1
+			@defaultMaxValue = 16
+			!Resource_Planetary_Config {}
+		}
+		@Item[MetalOre]
+		{
+			Tag = WBI
+			@lowResourceColor = 0.06,0.08,0.16,1
+			@highResourceColor = 0.53,0.47,0.37,1
+			@defaultMinValue = 2
+			@defaultMaxValue = 18
+			!Resource_Planetary_Config {}
+		}
+		@Item[Minerals]
+		{
+			@name = Minerite
+			Tag = WBI
+			@lowResourceColor = 0.06,0.08,0.16,1
+			@highResourceColor = 0.4,0.67,0.49,1
+			@defaultMinValue = 2
+			@defaultMaxValue = 18
+			!Resource_Planetary_Config {}
+		}
+		@Item[Substrate]
+		{
+			@name = Nitronite
+			Tag = WBI
+			@lowResourceColor = 0.06,0.08,0.16,1
+			@highResourceColor = 0.27,0.56,0.89,1
+			@defaultMinValue = 1.5
+			@defaultMaxValue = 7
+			!Resource_Planetary_Config {}
+		}
+		@Item[MetallicOre]
+		{
+			@name = Oxium
+			Tag = WBI
+			@lowResourceColor = 0.06,0.08,0.16,1
+			@highResourceColor = 0.2,0.6,0.8,1
+			@defaultMinValue = 5
+			!Resource_Planetary_Config {}
+		}
+		@Item[RareMetals]
+		{
+			@name = PreciousMetals
+			Tag = WBI
+			@lowResourceColor = 0.06,0.08,0.16,1
+			@highResourceColor = 0.62,0.34,0.51,1
+			@defaultMinValue = 2
+			@defaultMaxValue = 15
+			!Resource_Planetary_Config {}
+		}
+		@Item[Dirt]
+		{
 			@name = Rock
-			@Resource_Planetary_Config
-			{
-				@Item,*
-				{
-					@resourceName = Rock
-				}
-			}
+			Tag = WBI
+			@lowResourceColor = 0.06,0.08,0.16,1
+			@highResourceColor = 0.8,0.68,0.38,1
+			@defaultMinValue = 10
+			@defaultMaxValue = 43
+			!Resource_Planetary_Config {}
 		}
 		@Item[Hydrates]
 		{
-			@name = GrayWater
-			@Resource_Planetary_Config
-			{
-				@Item,*
-				{
-					@resourceName = GrayWater
-				}
-			}
+			@name = Zeonium
+			Tag = WBI
+			@lowResourceColor = 0.06,0.08,0.16,1
+			@highResourceColor = 0.78,0.62,0.94,1
+			@defaultMinValue = 1
+			@defaultMaxValue = 18
+			!Resource_Planetary_Config {}
 		}
-		!Item[RareMetals] {}
-		!Item[Alumina] {}
-		!Item[Borate] {}
-		!Item[Monazite] {}
-		!Item[SaltWater] {}
-		!Item[Silicates] {}
-		!Item[SolarWind] {}
+		!Item:HAS[~Tag[*]],* {}
+	}
+}
+
+// Crustal scanners
+@PART[OrbitalScanner|SurfaceScanner|scansat-resources*]:AFTER[SCANsat]
+{	
+	!MODULE[ModuleResourceScanner]:HAS[~ResourceName[Ore]],* {}
+	!MODULE[SCANresourceDisplay]:HAS[~ResourceName[Ore]],* {}
+	MODULE
+	{
+		name = SCANresourceDisplay
+		ResourceName = Blutonium
+	}
+	MODULE
+	{
+		name = SCANresourceDisplay
+		ResourceName = Explodium
+	}
+	MODULE
+	{
+		name = SCANresourceDisplay
+		ResourceName = Gemstones
+	}
+	MODULE
+	{
+		name = SCANresourceDisplay
+		ResourceName = GrayWater
+	}
+	MODULE
+	{
+		name = SCANresourceDisplay
+		ResourceName = Hexagen
+	}
+	MODULE
+	{
+		name = SCANresourceDisplay
+		ResourceName = Hydrokerbon
+	}
+	MODULE:NEEDS[Launchpad|RationalResources]
+	{
+		name = SCANresourceDisplay
+		ResourceName = MetalOre
+	}
+	MODULE
+	{
+		name = SCANresourceDisplay
+		ResourceName = Minerite
+	}
+	MODULE
+	{
+		name = SCANresourceDisplay
+		ResourceName = Nitronite
+	}
+	MODULE
+	{
+		name = SCANresourceDisplay
+		ResourceName = PreciousMetals
+	}
+	MODULE
+	{
+		name = SCANresourceDisplay
+		ResourceName = Rock
+	}
+	MODULE
+	{
+		name = SCANresourceDisplay
+		ResourceName = Oxium
+	}
+	MODULE
+	{
+		name = SCANresourceDisplay
+		ResourceName = Water
+	}
+	MODULE
+	{
+		name = SCANresourceDisplay
+		ResourceName = Zeonium
 	}
 }
