--- a/GameData/WildBlueIndustries/Buffalo/Parts/Command/BuffaloCab.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Command/BuffaloCab.cfg
@@ -57,6 +57,19 @@ PART
 	{
 		name = ModuleCommand
 		minimumCrew = 1
+		defaultControlPointDisplayName = #autoLOC_6011001 //#autoLOC_6011001 = Forward
+		CONTROLPOINT
+		{
+			name = Left
+			displayName = Left
+			orientation = 0,0,90
+		}
+		CONTROLPOINT
+		{
+			name = Right
+			displayName = Right
+			orientation = 0,0,-90
+		}
 	}
 
 	MODULE
@@ -160,17 +173,39 @@ PART
 
 	MODULE
 	{
-		name = WBILight
-		animationName = BuffaLights
-		startEventGUIName = Headlights On
-		endEventGUIName = Headlights Off
-		actionGUIName = Toggle Headlights
-		red = 1
-		green = 1
-		blue = 1
-		intensity = 1
-		ecRequired = 0.04
-		animationLayer = 12
+		name = WBIModuleColorChanger
+		shaderProperty = _EmissiveColor
+		animRate = 0.8
+		animState = false
+		useRate = true
+		toggleInEditor = true
+		toggleInFlight = true
+		toggleInFlight = true
+		unfocusedRange = 5
+		toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
+		eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
+		eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
+		toggleAction = True
+		defaultActionGroup = Light
+		redCurve
+		{
+			key = 0 0 0 3
+			key = 1 1 0 0
+		}
+		greenCurve
+		{
+			key = 0 0 0 1
+			key = 1 1 1 0
+		}
+		blueCurve
+		{
+			key = 0 0 0 0
+			key = 1 0.7 1.5 0
+		}
+		alphaCurve
+		{
+			key = 0 1
+		}
 	}
 
 	MODULE
@@ -184,6 +219,11 @@ PART
 		name = WBIPropStateHelper
 	}
 
+	MODULE
+	{
+		name = WBIAirParkController
+	}
+
 	MODULE:NEEDS[kOS]
 	{
 	    name = kOSProcessor
@@ -195,11 +235,6 @@ PART
 	MODULE:NEEDS[KerbalEngineer]
 	{
 		name = FlightEngineerModule
-	}
-
-	MODULE
-	{
-		name = WBIAirParkController
 	}
 
 	RESOURCE
